Intento de arreglo, cambios menores